# gexify

./: ARCHITECTURE.md  README.md  main.py  pyproject.toml
app/api/: endpoints.py
app/models/: gex.py
app/services/: gex_calculator.py
gexify/: .gitignore  README.md
gexify/app/: main.py
gexify/app/api/: endpoints.py
gexify/app/models/: gex.py
gexify/static/: app.js  index.html  styles.css
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_services.py
